@@ -1,6 +1,6 @@
 Package: batchelor
-Version: 1.7.11
-Date: 2021-03-06
+Version: 1.7.12
+Date: 2021-04-05
 Title: Single-Cell Batch Correction Methods
 Authors@R: c(person("Aaron", "Lun", role = c("aut", "cre"), email = "infinite.monkeys.with.keyboards@gmail.com"),
     person("Laleh", "Haghverdi", role="ctb"))
