@@ -10,7 +10,10 @@ export(batchCorrect)
 export(checkBatchConsistency)
 export(checkIfSCE)
 export(checkRestrictions)
+export(clusterAbundanceTest)
+export(clusterAbundanceVar)
 export(clusterMNN)
+export(compareMergedClusters)
 export(convertPCsToSCE)
 export(correctExperiments)
 export(cosineNorm)
@@ -73,6 +76,7 @@ importFrom(DelayedArray,seed)
 importFrom(DelayedArray,setAutoBPPARAM)
 importFrom(DelayedArray,sweep)
 importFrom(DelayedMatrixStats,colVars)
+importFrom(DelayedMatrixStats,rowMaxs)
 importFrom(DelayedMatrixStats,rowVars)
 importFrom(Matrix,Diagonal)
 importFrom(Matrix,colSums)
@@ -128,6 +132,7 @@ importFrom(scuttle,librarySizeFactors)
 importFrom(scuttle,logNormCounts)
 importFrom(scuttle,normalizeCounts)
 importFrom(scuttle,sumCountsAcrossCells)
+importFrom(stats,chisq.test)
 importFrom(stats,median)
 importFrom(stats,model.matrix)
 importFrom(utils,head)
